--- a/examples/index.html
+++ b/examples/index.html
@@ -62,6 +62,10 @@
   </style>
 </head>
 <body>
+  <!-- 엣지 스와이프 방지 가드 -->
+  <div class="edge-swipe-guard edge-swipe-guard--left"></div>
+  <div class="edge-swipe-guard edge-swipe-guard--right"></div>
+  
   <div class="app">
     <!-- Header -->
     <header class="app-header">
