--- a/examples/index.html
+++ b/examples/index.html
@@ -86,6 +86,6 @@
   </div>
 
   <script src="../dist/catui-mobile.js"></script>
-  <script src="app.js"></script>
+  <script src="app.js?ver"></script>
 </body>
 </html>
